# OSL-Animation-Engine

./: .gitmodules  CMakeLists.txt  README.md  build.sh
scripts/: build.sh
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
